--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_inappwebview: ^6.0.0
+  url_launcher: ^6.2.5
     
   webview_flutter: ^4.4.1
 
